# aai3-paper-experiments

./: .gitignore  README.md  environment.yml  train.py
aaisrc/: aaiagents.py  aaiyaml.py
agents_reference/: .gitignore  pyproject.toml
agents_reference/scripts/: competition.sh  heuristic.sh
agents_reference/src/reference_agents/: competition_random_heuristic.py  heuristic_agents.py  random_agents.py
analysis/outputs/: competitionGLMMTest.txt  foragingTaskOmnibusTests.txt  operantChamberTaskOmnibusTests.txt  overallCompetitionLeaderboard.csv
analysis/src/: .Rhistory  graphsAndTests.R
configs/exampleConfig/: radialArmDecayRipen.yml
configs/operantChamberTask/: operantChamberTask.yml  operantChamberTaskCurriculum-A.yaml  operantChamberTaskCurriculum-C.yml  operantChamberTaskCurriculum-D.yaml  operantChamberTaskCurriculum-E.yaml
configs/whatWhereWhenTask/: whatWhereWhenTask.yml
dreamer/: .gitignore  train.py
dreamer/results/: .Rhistory  competition-eval.csv  competition-training.csv  data_cleaning.R  (+6 more)
heuristicAgent/: heuristicAgentEvaluation.ipynb
ppo/: .gitignore  PPOEvalScript.ipynb  PPOTrainingScript.ipynb  train_from_sh.py
randomActionAgent/: randomActionAgentEvaluation.ipynb
random_heuristic_agents/: README.md  pyproject.toml
recurrent_ppo/: .gitignore  README.md  evaluate_from_sh.py  train_from_sh.py
scripts/: button-eval.sh  button.sh  competition-eval1.sh  competition-eval2.sh  competition-eval3.sh  competition-long-12M.sh  competition-long-8M.sh  competition.sh  foraging-eval.sh  foraging.sh  slurmintegrationtest.sh
(+363 files in other folders)
