[project]
name = "reference-agents"
version = "0.1.0"
description = "The reference agents for the AAI3 paper experiments."
dependencies = [
    "animalai>=4.1.0",
    "pandas<=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
heuristic = "reference_agents.heuristic_agents:main"
random = "reference_agents.random_agents:main"
